updated for github pages

--- a/amning3.html
+++ b/amning3.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/amning3.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/amning3.css" />
+  </head>
+  <body>
     <section>
+      <h1>Hvor mange rigtige fik du?</h1>
+      <p class="rigtig1">
+        Mange offentlige steder har ammerum, men det er ikke et krav at bruge
+        dem.
+      </p>
+      <p></p>
+      <p class="rigtig2">
+        Amning i offentligheden er beskyttet af dansk lovgivning om ligestilling
+        og ytringsfrihed.
+      </p>
+      <p class="rigtig3">
+        Kvinder har ret til at amme deres barn hvor som helst, det ellers er
+        tilladt at opholde sig.
+      </p>
+      <section id="resultat" class="overlay">
+        <button class="svar">
+          <span class="svar-tekst">
+            Amning i offentligheden er lovligt i Danmark. WHO anbefaler amning i
+            barnets første 6 måneder, men mange kvinder føler sig stadig utrygge
+            ved at amme offentligt. Der er ingen krav om særlige
+            ammefaciliteter, men nogle steder tilbyder det frivilligt. Amning
+            handler ikke kun om mad – det skaber også tryghed og nærhed. Du kan
+            nu trykke på afslut og prøve en anden kategori.
+          </span>
+        </button>
+      </section>
 
-        <h1>Hvor mange rigtige fik du?</h1>
-        <p class="rigtig1">Mange offentlige steder har ammerum, men det er ikke et krav at bruge dem.<p>
-        <p class="rigtig2">Amning i offentligheden er beskyttet af dansk lovgivning om ligestilling og ytringsfrihed.</p>
-        <p class="rigtig3">Kvinder har ret til at amme deres barn hvor som helst, det ellers er tilladt at opholde sig.</p>
-        <section id="resultat" class="overlay">
-            <button class="svar">
-                <span class="svar-tekst">
-            Amning i offentligheden er lovligt i Danmark. WHO anbefaler amning i barnets første 6 måneder, men mange kvinder føler sig stadig utrygge ved at amme offentligt. Der er ingen krav om særlige ammefaciliteter, men nogle steder tilbyder det frivilligt. Amning handler ikke kun om mad – det skaber også tryghed og nærhed.
-            Du kan nu trykke på afslut og prøve en anden kategori.
-        </span>
-    </button>
-</section>
-
-        <a href="menu.html"><img src="img/afslutknap.png" alt="afslut knap" class="afslutknap"></a>
+      <a href="menu.html"
+        ><img src="./img/afslutknap.png" alt="afslut knap" class="afslutknap"
+      /></a>
     </section>
 
     <script src="js/amning3.js"></script>
-</body>
+  </body>
 </html>
