--- a/kropsidealer.html
+++ b/kropsidealer.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/oversider.css">
-</head>
-<body>
-
-    <a href="kropsidealer2.html"><h1>Hvordan synes du at bryster burde se ud?</h1></a>
-  <a href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-    
-</body>
+    <link rel="stylesheet" href="css/oversider.css" />
+  </head>
+  <body>
+    <a href="kropsidealer2.html"
+      ><h1>Hvordan synes du at bryster burde se ud?</h1></a
+    >
+    <a href="menu.html"
+      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+    /></a>
+  </body>
 </html>
