--- a/kropsidealer2.html
+++ b/kropsidealer2.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/kropsidealer2.css">
-</head>
-<body>
- <h1>Vælg et sæt bryster</h1>   
- 
- <section class="billedegrid">
-  <a href="kropsidealer3.html"><img src="img/aflange-bryster(1).webp" alt="aflange-bryster"> </a>
-  <a href="kropsidealer3.html"><img src="img/forskellige-bryster(1).webp" alt="forskellige-bryster"></a>
-  <a href="kropsidealer3.html"><img src="img/runde-bryster(1).webp" alt="smaa-bryster"></a>
-  <a href="kropsidealer3.html"><img src="img/store-bryster.webp" alt="runde-bryster"></a>
- 
-</section>
+    <link rel="stylesheet" href="css/kropsidealer2.css" />
+  </head>
+  <body>
+    <h1>Vælg et sæt bryster</h1>
 
- <a href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-</body>
+    <section class="billedegrid">
+      <a href="kropsidealer3.html"
+        ><img src="./img/aflange-bryster(1).webp" alt="aflange-bryster" />
+      </a>
+      <a href="kropsidealer3.html"
+        ><img src="./img/forskellige-bryster(1).webp" alt="forskellige-bryster"
+      /></a>
+      <a href="kropsidealer3.html"
+        ><img src="./img/runde-bryster(1).webp" alt="smaa-bryster"
+      /></a>
+      <a href="kropsidealer3.html"
+        ><img src="./img/store-bryster.webp" alt="runde-bryster"
+      /></a>
+    </section>
+
+    <a href="menu.html"
+      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+    /></a>
+  </body>
 </html>
