--- a/kropsidealer3.html
+++ b/kropsidealer3.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/kropsidealer2.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/kropsidealer2.css" />
+  </head>
+  <body>
     <h1>Vælg et sæt brystvorter</h1>
 
     <section class="billedegrid brystvortegrid">
-        <a href="kropsidealer4.html"><img src="img/smaa-brystvorter.webp" alt="smaa-brystvorter"></a>
-        <a href="kropsidealer4.html"><img src="img/store-brystvorter.webp" alt="store-brystvorter"></a>
-        <a href="kropsidealer4.html"><img src="img/forskellige-brystvorter.webp" alt="forskellige-brystvorter"></a>
-        <a href="kropsidealer4.html"><img src="img/aflange-brystvorter.webp" alt="aflange-brystvorter"></a>
+      <a href="kropsidealer4.html"
+        ><img src="./img/smaa-brystvorter.webp" alt="smaa-brystvorter"
+      /></a>
+      <a href="kropsidealer4.html"
+        ><img src="./img/store-brystvorter.webp" alt="store-brystvorter"
+      /></a>
+      <a href="kropsidealer4.html"
+        ><img
+          src="./img/forskellige-brystvorter.webp"
+          alt="forskellige-brystvorter"
+      /></a>
+      <a href="kropsidealer4.html"
+        ><img src="./img/aflange-brystvorter.webp" alt="aflange-brystvorter"
+      /></a>
     </section>
 
-    <a href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-</body>
+    <a href="menu.html"
+      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+    /></a>
+  </body>
 </html>
