--- a/kropsidealer4.html
+++ b/kropsidealer4.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/kropsidealer.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/kropsidealer.css" />
+  </head>
+  <body>
     <div class="background">
-        <h1>Alle bryster er bryster</h1>
-    
-        <a href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
+      <h1>Alle bryster er bryster</h1>
+
+      <a href="menu.html"
+        ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      /></a>
     </div>
-</body>
+  </body>
 </html>
