--- a/opbygning2.html
+++ b/opbygning2.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/opbygning2.css">
-</head>
-<body>
-   <img src="img/brystanatomi2.webp" alt="brystetsanatomi" class="anatomibryster"> 
-   <section>
-    <section class="button-container">
+    <link rel="stylesheet" href="css/opbygning2.css" />
+  </head>
+  <body>
+    <img
+      src="./img/brystanatomi2.webp"
+      alt="brystetsanatomi"
+      class="anatomibryster"
+    />
+    <section>
+      <section class="button-container">
         <button id="btn1">Brystvorte</button>
         <button id="btn2">Brystmuskel</button>
         <button id="btn3">Mælkekirtel</button>
         <button id="btn4">Fedtvæv</button>
         <button id="btn5">Ribben</button>
         <button id="btn6">Huden</button>
+      </section>
+
+      <!-- Place these in your HTML body -->
+      <section class="red-dot" id="dot1"></section>
+      <!-- Brystvorte -->
+      <section class="red-dot" id="dot2"></section>
+      <!-- Brystmuskel -->
+      <section class="red-dot" id="dot3"></section>
+      <!-- Mælkekirtel -->
+      <section class="red-dot" id="dot4"></section>
+      <!-- Fedtvæv -->
+      <section class="red-dot" id="dot5"></section>
+      <!-- Ribben -->
+      <section class="red-dot" id="dot6"></section>
+      <!-- Huden -->
+
+      <a href="menu.html"
+        ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      /></a>
     </section>
-    
-    <!-- Place these in your HTML body -->
-<section class="red-dot" id="dot1" ></section> <!-- Brystvorte -->
-<section class="red-dot" id="dot2" ></section> <!-- Brystmuskel -->
-<section class="red-dot" id="dot3" ></section> <!-- Mælkekirtel -->
-<section class="red-dot" id="dot4" ></section> <!-- Fedtvæv -->
-<section class="red-dot" id="dot5" ></section> <!-- Ribben -->
-<section class="red-dot" id="dot6" ></section> <!-- Huden -->
 
-
-    <a href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-   </section>
-
-   <script src="js/opbygning.js"></script>
-</body>
+    <script src="js/opbygning.js"></script>
+  </body>
 </html>
