--- a/pubertet.html
+++ b/pubertet.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/oversider.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="css/oversider.css" />
+  </head>
+  <body>
     <section>
-        <a href="pubertet2.html"><h1>kender du brysternes 5 stadier under pubertet?</h1></a>
+      <a href="pubertet2.html"
+        ><h1>kender du brysternes 5 stadier under pubertet?</h1></a
+      >
     </section>
-    <a  href="menu.html"><img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-    
-</body>
+    <a href="menu.html"
+      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+    /></a>
+  </body>
 </html>
