--- a/pubertet3.html
+++ b/pubertet3.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/pubertet.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/pubertet.css" />
+  </head>
+  <body>
     <section class="quiz-container">
-        <h2>Hvad sker der typisk i stadie 2?</h2>
-        <section class="svarmuligheder">
-            <button class="svarmulighed knappe-a">A) Brystet er fuldt udviklet</button>
-            <button class="svarmulighed knappe-b" data-korrekt="true">
-                B) Brystknoppen begynder at danne sig, og området hæver let
-            </button>
-            <button class="svarmulighed knappe-c">C) Der opstår smerter i brystet</button>
-            <button class="svarmulighed knappe-d">D) Brystvorten trækkes indad</button>
-        </section>
+      <h2>Hvad sker der typisk i stadie 2?</h2>
+      <section class="svarmuligheder">
+        <button class="svarmulighed knappe-a">
+          A) Brystet er fuldt udviklet
+        </button>
+        <button class="svarmulighed knappe-b" data-korrekt="true">
+          B) Brystknoppen begynder at danne sig, og området hæver let
+        </button>
+        <button class="svarmulighed knappe-c">
+          C) Der opstår smerter i brystet
+        </button>
+        <button class="svarmulighed knappe-d">
+          D) Brystvorten trækkes indad
+        </button>
+      </section>
     </section>
 
     <section id="resultat-overlay" class="overlay">
-        <div id="resultat" class="svar">
-            <span class="svar-tekst">
-                Rigtigt svar: B – I stadie 2 begynder brystknoppen at danne sig, og området hæver lidt.<br>
-                Næste spørgsmål: <a href="pubertet4.html">tryk her</a>
-            </span>
-        </div>
+      <div id="resultat" class="svar">
+        <span class="svar-tekst">
+          Rigtigt svar: B – I stadie 2 begynder brystknoppen at danne sig, og
+          området hæver lidt.<br />
+          Næste spørgsmål: <a href="pubertet4.html">tryk her</a>
+        </span>
+      </div>
     </section>
 
     <section id="forkert-overlay" class="overlay">
-        <button class="svar">
-            <span class="svar-tekst">
-                Forkert svar – prøv igen!
-            </span> 
-        </button>
+      <button class="svar">
+        <span class="svar-tekst"> Forkert svar – prøv igen! </span>
+      </button>
     </section>
 
     <a href="menu.html">
-        <img src="img/afslutknap.png" alt="afslutknap" class="afslutknap">
+      <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap" />
     </a>
 
     <audio id="correctSound" src="lyd/rigtigt-svar.mp3" preload="auto"></audio>
@@ -45,6 +50,5 @@
 
     <script src="js/pubertet.js"></script>
     <script src="js/lyd.js"></script>
-</body>
+  </body>
 </html>
-
