--- a/pubertet5.html
+++ b/pubertet5.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/pubertet.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/pubertet.css" />
+  </head>
+  <body>
     <section class="quiz-container">
-        <h2>I hvilket stadie begynder bryst og brystvorte at løfte sig tydeligt frem fra brystvæggen?</h2>
-        <section class="svarmuligheder">
-            <button class="svarmulighed knappe-a">A) Stadie 2</button>
-            <button class="svarmulighed knappe-b" data-korrekt="true">B) Stadie 4</button>
-            <button class="svarmulighed knappe-c">C) Stadie 1</button>
-            <button class="svarmulighed knappe-d">D) Stadie 5</button>
-        </section>
+      <h2>
+        I hvilket stadie begynder bryst og brystvorte at løfte sig tydeligt frem
+        fra brystvæggen?
+      </h2>
+      <section class="svarmuligheder">
+        <button class="svarmulighed knappe-a">A) Stadie 2</button>
+        <button class="svarmulighed knappe-b" data-korrekt="true">
+          B) Stadie 4
+        </button>
+        <button class="svarmulighed knappe-c">C) Stadie 1</button>
+        <button class="svarmulighed knappe-d">D) Stadie 5</button>
+      </section>
     </section>
-    
+
     <section id="resultat-overlay" class="overlay">
-        <div id="resultat" class="svar"> 
-            <span class="svar-tekst">
-                Rigtigt svar: B – I stadie 4 begynder bryst og brystvorte at løfte sig tydeligt frem fra brystvæggen.<br>
-                Næste spørgsmål: <a href="pubertet6.html">tryk her</a>
-            </span> 
-        </div>
+      <div id="resultat" class="svar">
+        <span class="svar-tekst">
+          Rigtigt svar: B – I stadie 4 begynder bryst og brystvorte at løfte sig
+          tydeligt frem fra brystvæggen.<br />
+          Næste spørgsmål: <a href="pubertet6.html">tryk her</a>
+        </span>
+      </div>
     </section>
 
     <section id="forkert-overlay" class="overlay">
-        <button class="svar">
-            <span class="svar-tekst">
-                Forkert svar – prøv igen!
-            </span> 
-        </button>
+      <button class="svar">
+        <span class="svar-tekst"> Forkert svar – prøv igen! </span>
+      </button>
     </section>
 
     <a href="menu.html">
-        <img src="img/afslutknap.png" alt="afslutknap" class="afslutknap">
+      <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap" />
     </a>
 
     <audio id="correctSound" src="lyd/rigtigt-svar.mp3" preload="auto"></audio>
@@ -43,6 +47,5 @@
 
     <script src="js/pubertet.js"></script>
     <script src="js/lyd.js"></script>
-</body>
+  </body>
 </html>
-
