--- a/opbygning.html
+++ b/opbygning.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eksamen</title>
-    <link rel="stylesheet" href="css/oversider.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/oversider.css" />
+  </head>
+  <body>
     <section>
-    <a href="opbygning2.html"><h1>Kan du sammensætte brystet korrekt</h1></a>
-    <a href="menu.html"> <img src="img/afslutknap.png" alt="afslutknap" class="afslutknap"></a>
-</section>
-</body>
+      <a href="opbygning2.html"><h1>Kan du sammensætte brystet korrekt</h1></a>
+      <a href="menu.html">
+        <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      /></a>
+    </section>
+  </body>
 </html>
