--- a/amning.html
+++ b/amning.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="da">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/oversider.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/oversider.css" />
     <title>Eksamen</title>
-</head>
-<body>
-
+  </head>
+  <body>
     <section>
-        <a href="amning2.html"><h1>hvad ved du om amning i offentligheden?</h1></a>
-        <h3>vælg 3 udsagn du mener er korrekt</h3>
-        <a href="menu.html"><img src="img/afslutknap.png" alt="afslut knap" class="afslutknap"></a>
+      <a href="amning2.html"
+        ><h1>hvad ved du om amning i offentligheden?</h1></a
+      >
+      <h3>vælg 3 udsagn du mener er korrekt</h3>
+      <a href="menu.html"
+        ><img src="./img/afslut knap.png" alt="afslut knap" class="afslutknap"
+      /></a>
     </section>
-
-    
-</body>
+  </body>
 </html>
