--- a/pubertet2.html
+++ b/pubertet2.html
@@ -48,8 +48,12 @@
     </a>
 
     <!-- Lyd -->
-    <audio id="correctSound" src="lyd/rigtigt-svar.mp3" preload="auto"></audio>
-    <audio id="wrongSound" src="lyd/forkert-svar.mp3" preload="auto"></audio>
+    <audio
+      id="correctSound"
+      src="./lyd/rigtigt-svar.mp3"
+      preload="auto"
+    ></audio>
+    <audio id="wrongSound" src="./lyd/forkert-svar.mp3" preload="auto"></audio>
 
     <!-- Scripts -->
     <script src="js/pubertet.js"></script>
