--- a/pubertet6.html
+++ b/pubertet6.html
@@ -43,8 +43,12 @@
       <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap" />
     </a>
 
-    <audio id="correctSound" src="lyd/rigtigt-svar.mp3" preload="auto"></audio>
-    <audio id="wrongSound" src="lyd/forkert-svar.mp3" preload="auto"></audio>
+    <audio
+      id="correctSound"
+      src="./lyd/rigtigt-svar.mp3"
+      preload="auto"
+    ></audio>
+    <audio id="wrongSound" src="./lyd/forkert-svar.mp3" preload="auto"></audio>
 
     <script src="js/pubertet.js"></script>
     <script src="js/lyd.js"></script>
