--- a/amning.html
+++ b/amning.html
@@ -13,7 +13,10 @@
       >
       <h3>vælg 3 udsagn du mener er korrekt</h3>
       <a href="menu.html"
-        ><img src="./img/afslut knap.png" alt="afslut knap" class="afslutknap"
+        ><img
+          src="/eksamen2025/img/afslut knap.png"
+          alt="afslut knap"
+          class="afslutknap"
       /></a>
     </section>
   </body>
