--- a/amning2.html
+++ b/amning2.html
@@ -57,7 +57,7 @@
       </form>
 
       <a href="menu.html"
-        ><img src="./img/afslutknap.png" alt="afslut knap" class="afslutknap"
+        <img src="/eksamen2025/img/afslutknap.png" alt="afslut knap" class="afslutknap"
       /></a>
     </section>
     <script src="js/amning.js"></script>
