--- a/amning3.html
+++ b/amning3.html
@@ -36,7 +36,10 @@
       </section>
 
       <a href="menu.html"
-        ><img src="./img/afslutknap.png" alt="afslut knap" class="afslutknap"
+        ><img
+          src="/eksamen2025/img/afslutknap.png"
+          alt="afslut knap"
+          class="afslutknap"
       /></a>
     </section>
 
