--- a/kropsidealer.html
+++ b/kropsidealer.html
@@ -11,7 +11,10 @@
       ><h1>Hvordan synes du at bryster burde se ud?</h1></a
     >
     <a href="menu.html"
-      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      ><img
+        src="/eksamen2025/img/afslutknap.png"
+        alt="afslutknap"
+        class="afslutknap"
     /></a>
   </body>
 </html>
