--- a/kropsidealer2.html
+++ b/kropsidealer2.html
@@ -11,21 +11,29 @@
 
     <section class="billedegrid">
       <a href="kropsidealer3.html"
-        ><img src="./img/aflange-bryster(1).webp" alt="aflange-bryster" />
+        ><img
+          src="/eksamen2025/img/aflange-bryster(1).webp"
+          alt="aflange-bryster"
+        />
       </a>
       <a href="kropsidealer3.html"
-        ><img src="./img/forskellige-bryster(1).webp" alt="forskellige-bryster"
+        ><img
+          src="/eksamen2025/img/forskellige-bryster(1).webp"
+          alt="forskellige-bryster"
       /></a>
       <a href="kropsidealer3.html"
-        ><img src="./img/runde-bryster(1).webp" alt="smaa-bryster"
+        ><img src="/eksamen2025/img/runde-bryster(1).webp" alt="smaa-bryster"
       /></a>
       <a href="kropsidealer3.html"
-        ><img src="./img/store-bryster.webp" alt="runde-bryster"
+        ><img src="/eksamen2025/img/store-bryster.webp" alt="runde-bryster"
       /></a>
     </section>
 
     <a href="menu.html"
-      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      ><img
+        src="/eksamen2025/img/afslutknap.png"
+        alt="afslutknap"
+        class="afslutknap"
     /></a>
   </body>
 </html>
