--- a/kropsidealer3.html
+++ b/kropsidealer3.html
@@ -11,23 +11,32 @@
 
     <section class="billedegrid brystvortegrid">
       <a href="kropsidealer4.html"
-        ><img src="./img/smaa-brystvorter.webp" alt="smaa-brystvorter"
-      /></a>
-      <a href="kropsidealer4.html"
-        ><img src="./img/store-brystvorter.webp" alt="store-brystvorter"
+        ><img
+          src="/eksamen2025/img/smaa-brystvorter.webp"
+          alt="smaa-brystvorter"
       /></a>
       <a href="kropsidealer4.html"
         ><img
-          src="./img/forskellige-brystvorter.webp"
+          src="/eksamen2025/img/store-brystvorter.webp"
+          alt="store-brystvorter"
+      /></a>
+      <a href="kropsidealer4.html"
+        ><img
+          src="/eksamen2025/img/forskellige-brystvorter.webp"
           alt="forskellige-brystvorter"
       /></a>
       <a href="kropsidealer4.html"
-        ><img src="./img/aflange-brystvorter.webp" alt="aflange-brystvorter"
+        ><img
+          src="/eksamen2025/img/aflange-brystvorter.webp"
+          alt="aflange-brystvorter"
       /></a>
     </section>
 
     <a href="menu.html"
-      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      ><img
+        src="/eksamen2025/img/afslutknap.png"
+        alt="afslutknap"
+        class="afslutknap"
     /></a>
   </body>
 </html>
