--- a/menu.html
+++ b/menu.html
@@ -12,13 +12,12 @@
       <h2><a href="opbygning.html">Brystets opbygning</a></h2>
 
       <video
-        src="./img/animatic-eksamen-maj-2025.mp4"
+        src="/eksamen2025/img/animatic-eksamen-maj-2025.mp4"
         autoplay
         loop
         muted
         playsinline
       ></video>
-
       <h2><a href="kropsidealer.html">Kropsidealer & kropsbillede</a></h2>
       <h2>
         <a href="pubertet.html">Pubertetens betydning for brystudvikling</a>
