--- a/opbygning.html
+++ b/opbygning.html
@@ -10,7 +10,10 @@
     <section>
       <a href="opbygning2.html"><h1>Kan du sammensætte brystet korrekt</h1></a>
       <a href="menu.html">
-        <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+        <img
+          src="/eksamen2025/img/afslutknap.png"
+          alt="afslutknap"
+          class="afslutknap"
       /></a>
     </section>
   </body>
