--- a/opbygning2.html
+++ b/opbygning2.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img
-      src="./img/brystanatomi2.webp"
+      src="/eksamen2025/img/brystanatomi2.webp"
       alt="brystetsanatomi"
       class="anatomibryster"
     />
@@ -37,7 +37,10 @@
       <!-- Huden -->
 
       <a href="menu.html"
-        ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+        ><img
+          src="/eksamen2025/img/afslutknap.png"
+          alt="afslutknap"
+          class="afslutknap"
       /></a>
     </section>
 
