--- a/pubertet.html
+++ b/pubertet.html
@@ -13,7 +13,10 @@
       >
     </section>
     <a href="menu.html"
-      ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+      ><img
+        src="/eksamen2025/img/afslutknap.png"
+        alt="afslutknap"
+        class="afslutknap"
     /></a>
   </body>
 </html>
