--- a/kropsidealer4.html
+++ b/kropsidealer4.html
@@ -11,7 +11,10 @@
       <h1>Alle bryster er bryster</h1>
 
       <a href="menu.html"
-        ><img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap"
+        ><img
+          src="/eksamen2025/img/afslutknap.png"
+          alt="afslutknap"
+          class="afslutknap"
       /></a>
     </div>
   </body>
