--- a/pubertet2.html
+++ b/pubertet2.html
@@ -44,16 +44,24 @@
     </section>
 
     <a href="menu.html">
-      <img src="./img/afslutknap.png" alt="afslutknap" class="afslutknap" />
+      <img
+        src="/eksamen2025/img/afslutknap.png"
+        alt="afslutknap"
+        class="afslutknap"
+      />
     </a>
 
     <!-- Lyd -->
     <audio
       id="correctSound"
-      src="./lyd/rigtigt-svar.mp3"
+      src="/eksamen2025/lyd/rigtigt-svar.mp3"
       preload="auto"
     ></audio>
-    <audio id="wrongSound" src="./lyd/forkert-svar.mp3" preload="auto"></audio>
+    <audio
+      id="wrongSound"
+      src="/eksamen2025/lyd/forkert-svar.mp3"
+      preload="auto"
+    ></audio>
 
     <!-- Scripts -->
     <script src="js/pubertet.js"></script>
